--- a/TP_MVVM/App.xaml
+++ b/TP_MVVM/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TP_MVVM"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/UserView.xaml">
     <Application.Resources>
          
     </Application.Resources>
